<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.android.navigation.persegiPanjangFragment">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editText2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.214"
                    app:layout_constraintVertical_bias="0.044" android:hint="@string/panjang"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editText3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/editText2" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.214" app:layout_constraintVertical_bias="0.054"
                    android:hint="@string/lebar"/>
            <Button
                    android:text="@string/hitung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_hitungpp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="60dp"
                    app:layout_constraintTop_toBottomOf="@+id/editText3" app:layout_constraintHorizontal_bias="0.127"/>
            <TextView
                    android:text="@string/luas_pp"
                    android:layout_width="122dp"
                    android:layout_height="33dp"
                    android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_hitungpp" app:layout_constraintHorizontal_bias="0.142"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            <TextView
                    android:text="@string/keliling_pp"
                    android:layout_width="122dp"
                    android:layout_height="33dp"
                    android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="100dp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_hitungpp" app:layout_constraintHorizontal_bias="0.142"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
            <Button
                    android:text="@string/share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="447dp"
                    tools:layout_editor_absoluteX="46dp" android:id="@+id/btn_share" tools:ignore="MissingConstraints"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>