<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="160dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView
                android:text="@string/kelas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="44dp"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView
                android:text="@string/nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginTop="48dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>